# nhs-number-using-rust

./: AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  index.md  llms.json  llms.txt  spec.md
.claude/: settings.local.json
AGENTS/: architecture.md  conventions.md  release.md  safety.md  spec-driven-development.md  testing.md  workflows.md
docs/api/: index.md
docs/checksum/: index.md
docs/faq/: index.md
docs/ranges/: index.md
docs/usage/: index.md
examples/: README.md  basic_usage.rs  bulk_processing.rs  generate_valid.rs  parsing.rs  sorting.rs  validation.rs
spec/: 01-purpose-and-scope.md  02-domain-model.md  03-data-model.md  04-public-api-surface.md  05-string-forms.md  06-check-digit-algorithm.md  07-number-ranges.md  08-random-sampling.md  09-ordering-equality-collections.md  10-patient-safety-framing.md  11-serialisation.md  12-error-handling.md  13-testing-strategy.md  14-compatibility-and-versioning.md  15-dependencies-and-build.md  16-roadmap.md  17-open-tasks.md  18-open-questions-and-divergences.md  19-glossary.md  index.md
src/: from_str.rs  lib.rs  parse_error.rs  serde_string.rs  testable.rs
